crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_unsupported_initial_state.rs
fn rejects_unsupported_initial_state(x: [i32; 3]) {
    //@ assert "true"
}

fn main() {}
